spacing corrections

--- a/src/scss/_components.widgets.scss
+++ b/src/scss/_components.widgets.scss
@@ -24,7 +24,7 @@
     }
 
 &-footer:nth-child(3n) {
-    padding-right: 0;
+    //padding-right: 0;
 }
 
 }
